--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-foo world
+<html>
+  <head>
+    <title>Kaosat.dev</title>
+    <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+  </head>
+
+  <body>
+    <div class="container">
+      <section class="infos">
+        <h1>Kaosat.net</h1>
+        <p>Gardening, Aquaponics, Programming, 3d printing, and lots more</p>
+        <ul class="things">
+          <li>
+              <span>profile on </span><a href="https://github.com/kaosat-dev">github</a>
+          </li>
+          <li>
+              <span>core dev of </span><a href="https://openjscad.org/">jscad</a>
+          </li>
+          <li>
+            <span>mentor for kids at </span><a href="http://coderdojo-saar.de/">CoderDojo</a>
+          </li>
+        </ul>
+        <p class="life">
+          Dad, living in Germany, gardener of code & plants.
+        </p>
+        <p class="life">
+          Passion for 3d (webgl, printing), at the service of actual things (food, health, building etc).
+        </p>
+        <p class="life">
+          Shamelessly enthusiastic javascripter , occasional C++, Pythonista, Elixir, etc
+        </p>
+        <p class="life">
+          One of the main developpers/maintainers of https://github.com/jscad/OpenJSCAD.org and proud of it :)
+        </p>
+        <p class="life">
+            Increasingly minimalist.
+            Love people, love to talk :)
+        </p>
+      </section>
+      <section class="content">
+          <h1>posts</h1>
+          <ul class="posts">
+            <li>
+                <span class="date">2018-11-26</span>
+                <a href="/posts/3d-printed-onion-planting-tool/post.md">3d printed onion planting tool</a>
+            </li>
+            <li>
+                <span class="date">2018-11-12</span>
+                <a href="/posts/greenhouse-building-musings/greenhouse-building-musings.md">Greenhouse building musings</a>
+            </li>
+            <li>
+                <span class="date">2018-26-08</span>
+                <a href="/posts/mirabelle-plums-first-harvest/mirabelle-first-harvest.md">Mirabelle plums first harvest</a>
+            </li>
+            <li>
+                <span class="date">2017-04-02</span>
+                <a href="/posts/unroll the Rollup banner/unroll the Rollup banner !.md">unroll the Rollup banner !</a>
+            </li>
+            <li>
+                <span class="date">2017-04-02</span>
+                <a href="/posts/back-into-action/back-into-action.md">back into action</a>
+            </li>
+          </ul>
+      </section>
+      <footer>
+        <p>work in progress !</p>
+        <div>
+          Want to share this website with friends? Share the URL:
+          <b><span id="url"></span></b>
+        </div>
+        <p>
+          This website supports peer to peer sharing via <a id="beaker-url" title="The Beaker Browser">The Beaker Browser</a>.
+        </p>
+        <p>
+          Want to learn more about how this website works? <a id="library-url">View the source!</a>
+        </p>
+      </footer>
+    </div>
+
+  </body>
+
+  <script type="application/javascript" src="script.js"></script>
+</html>
