chore(index): updated to add stub for cv

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
               <span>profile on </span><a href="https://github.com/kaosat-dev">github</a>
           </li>
           <li>
+            <span> my cv </span><a href="./docs/cv">Cv</a>
+          </li>
+          <li>
               <span>core dev of </span><a href="https://openjscad.org/">jscad</a>
           </li>
           <li>
