chore(index): updated links to match recent changes

--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
           <ul class="posts">
             <li>
                 <span class="date">2018-11-26</span>
-                <a href="/posts/3d-printed-onion-planting-tool/post.md">3d printed onion planting tool</a>
+                <a href="/posts/3d-printed-onion-planting-tool/index.md">3d printed onion planting tool</a>
             </li>
             <li>
                 <span class="date">2018-11-12</span>
-                <a href="/posts/greenhouse-building-musings/greenhouse-building-musings.md">Greenhouse building musings</a>
+                <a href="/posts/greenhouse-building-musings/index.md">Greenhouse building musings</a>
             </li>
             <li>
                 <span class="date">2018-26-08</span>
-                <a href="/posts/mirabelle-plums-first-harvest/mirabelle-first-harvest.md">Mirabelle plums first harvest</a>
+                <a href="/posts/mirabelle-plums-first-harvest/index.md">Mirabelle plums first harvest</a>
             </li>
             <li>
                 <span class="date">2017-04-02</span>
-                <a href="/posts/unroll the Rollup banner/unroll the Rollup banner !.md">unroll the Rollup banner !</a>
+                <a href="/posts/unroll the Rollup banner/index.md">unroll the Rollup banner !</a>
             </li>
             <li>
                 <span class="date">2017-04-02</span>
-                <a href="/posts/back-into-action/back-into-action.md">back into action</a>
+                <a href="/posts/back-into-action/index.md">back into action</a>
             </li>
           </ul>
       </section>
