feat(pages): * fleshed out pages * added basic resumes (pre generated)

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,18 +18,46 @@
               <h2>Programming, 3d printing, Gardening, Aquaponics, and lots more</h2>
             </section>
             <section id="navigation" class='navigation'>
-              <span> <a href="/pages/projects.html">projects</a></span> <span> <a href="/pages/articles.html">articles</a></span> <span> <a href="/pages/about.html">about</a></span> <span> <a href="/pages/contact.html">contact</a></span>
+              <span> <a href="/pages/projects.html">projects</a></span> <span> <a href="/pages/articles.html">articles</a></span> <span> <a href="/pages/about.html">about</a></span>
               <span>
                 <input type='text' placeholder='search' id='search'></input>
                 <div id='searchResults'></div>
               </span>
-              <a href='https://github.com/kaosat-dev' target="_blank" rel="noopener" class='icon' >
+              <a href='https://github.com/kaosat-dev' alt='github'  target="_blank" rel="noopener" class='icon' >
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 192 192" width="24px" height="24px"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"/><g fill="#000000"><path d="M87.2,16.8c-36.8,4 -66.4,33.6 -70.4,69.6c-4,37.6 17.6,71.2 50.4,84c2.4,0.8 4.8,-0.8 4.8,-4v-12.8c0,0 -3.2,0.8 -7.2,0.8c-11.2,0 -16,-9.6 -16.8,-15.2c-0.8,-3.2 -2.4,-5.6 -4.8,-8c-2.4,-0.8 -3.2,-0.8 -3.2,-1.6c0,-1.6 2.4,-1.6 3.2,-1.6c4.8,0 8.8,5.6 10.4,8c4,6.4 8.8,8 11.2,8c3.2,0 5.6,-0.8 7.2,-1.6c0.8,-5.6 3.2,-11.2 8,-14.4c-18.4,-4 -32,-14.4 -32,-32c0,-8.8 4,-17.6 9.6,-24c-0.8,-1.6 -1.6,-5.6 -1.6,-11.2c0,-3.2 0,-8 2.4,-12.8c0,0 11.2,0 22.4,10.4c4,-1.6 9.6,-2.4 15.2,-2.4c5.6,0 11.2,0.8 16,2.4c10.4,-10.4 22.4,-10.4 22.4,-10.4c1.6,4.8 1.6,9.6 1.6,12.8c0,6.4 -0.8,9.6 -1.6,11.2c5.6,6.4 9.6,14.4 9.6,24c0,17.6 -13.6,28 -32,32c4.8,4 8,11.2 8,18.4v20.8c0,2.4 2.4,4.8 5.6,4c29.6,-12 50.4,-40.8 50.4,-74.4c0,-48 -40.8,-85.6 -88.8,-80z"/></g></g></svg>
+              </a>
+              <a href='mailto:contact@kaosat.net' alt='email' class='icon' >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px">
+                  <path d="M 4 4 C 2.895 4 2 4.895 2 6 L 2 18 C 2 19.105 2.895 20 4 20 L 20 20 C 21.105 20 22 19.105 22 18 L 22 6 C 22 4.895 21.105 4 20 4 L 4 4 z M 5.5976562 6 L 18.402344 6 L 12 10 L 5.5976562 6 z M 5 8.6269531 L 12 13 L 19 8.6269531 L 19 18 L 5 18 L 5 8.6269531 z"/>
+                </svg>
               </a>
             </section>
           </header>
           <section class="content grid-central">
-            <div></div>
+            <div class='about'>
+    <h1 id="who-again">Who again?</h1>
+<p><img src="/assets/img/mememe.jpg" alt="peek-a-printer" title="peek-a-printer"></p>
+<p>I am a Dad, living in Germany, gardener of code &amp; plants.</p>
+<ul>
+<li>Passion for 3d (programming, webgl, printing), at the service of &#39;real&#39; things (food, health, building etc), but also for fun !</li>
+<li>Shamelessly enthusiastic javascripter , occasional C++, Pythonista, Elixir, etc</li>
+<li>One of the main developpers/maintainers of <a href="https://github.com/jscad/OpenJSCAD.org">https://github.com/jscad/OpenJSCAD.org</a> and proud of it :)</li>
+<li>Love of plants, nature &amp; woodworking</li>
+<li>Increasingly minimalist: less is more ! (less tooling, less complexity etc)</li>
+<li>etc ?</li>
+</ul>
+<p>Love people, love to talk , so please drop me a line : kaosat.dev<strong>AT</strong>gmail.com !</p>
+<h2 id="currently-available">Currently available</h2>
+<p>Do you need professional software development work done ?
+You are in luck , I am currently available for all your programming needs.</p>
+<ul>
+<li><a href="/pages/resume-en.html">resume (English)</a></li>
+<li><a href="/pages/resume-de.html">resume (German)</a></li>
+<li><a href="/pages/resume-fr.html">resume (French)</a></li>
+</ul>
+<p>and of course, <a href="https://github.com/kaosat-dev">githube profile</a></p>
+
+  </div>
           </section>
         </div>
 
