--- a/index.html
+++ b/index.html
@@ -35,23 +35,18 @@
           </header>
           <section class="content grid-central">
             <div class='index'>
-    <div>
+    <div class='description'>
       <p><img src="/assets/img/mememe.jpg" alt="peek-a-printer" title="peek-a-printer"></p>
 <p>Welcome !
-I am a Dad, living in Germany, gardener of code &amp; plants.</p>
-<ul>
-<li>Passion for 3d (programming, webgl, printing), at the service of &#39;real&#39; things (food, health, building etc), but also for fun !</li>
-<li>Shamelessly enthusiastic javascripter , occasional C++, Pythonista, etc</li>
-<li>One of the main developpers/maintainers of <a href="https://github.com/jscad/OpenJSCAD.org">https://github.com/jscad/OpenJSCAD.org</a> and proud of it :)</li>
-<li>Love of plants, nature &amp; woodworking</li>
-<li>Increasingly minimalist: less is more ! (less tooling, less complexity etc)</li>
-</ul>
+My name is Mark &amp; I am a gardener of code &amp; plants.</p>
+<p>Bullet points in bullet list (ah the wonders of technology)</p>
 <ul>
 <li>core dev of <a href="https://openjscad.org/">jscad</a></li>
 <li>mentor for kids at <a href="http://coderdojo-saar.de/">CoderDojo-saar</a></li>
 <li>find me on <a href="https://github.com/kaosat-dev">github</a></li>
 <li>my <a href="/pages/resume-en.html">resume</a>  </li>
 </ul>
+<p>Curious for more ? check out my latest posts &amp; projects below or read up <a href="&#39;/pages/about&#39;">here</a></p>
 
     </div>
 
@@ -64,16 +59,24 @@ I am a Dad, living in Germany, gardener of code &amp; plants.</p>
       <ul class='articlesList'>
         
     <li>
-    <span>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
+      <div class='item'>
+        <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
+      </div>
     </li>
     <li>
-    <span>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
+      <div class='item'>
+        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
+      </div>
     </li>
     <li>
-    <span>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
+      <div class='item'>
+        <span class='date'>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
+      </div>
     </li>
     <li>
-    <span></span> <a href='/pages/articles'>...more</a>
+      <div class='item'>
+        <span class='date'></span> <a href='/pages/articles'>...more</a>
+      </div>
     </li>
       </ul>
     </div>
@@ -88,6 +91,12 @@ I am a Dad, living in Germany, gardener of code &amp; plants.</p>
     </li>
     <li>
       <a href='/pages/projects'>garden</a>
+    </li>
+    <li>
+      <a href='/pages/projects'>robots</a>
+    </li>
+    <li>
+      <a href='/pages/projects'>3d printing</a>
     </li>
     <li>
       <a href='/pages/projects'>...more</a>
