--- a/pages/about.html
+++ b/pages/about.html
@@ -42,20 +42,19 @@
 <li>Passion for 3d (programming, webgl, printing), at the service of &#39;real&#39; things (food, health, building etc), but also for fun !</li>
 <li>Shamelessly enthusiastic javascripter , occasional C++, Pythonista, Elixir, etc</li>
 <li>One of the main developpers/maintainers of <a href="https://github.com/jscad/OpenJSCAD.org">https://github.com/jscad/OpenJSCAD.org</a> and proud of it :)</li>
-<li>Love of plants, nature &amp; woodworking</li>
+<li>Love of plants, nature</li>
 <li>Increasingly minimalist: less is more ! (less tooling, less complexity etc)</li>
-<li>etc ?</li>
 </ul>
 <p>Love people, love to talk , so please drop me a line : kaosat.dev<strong>AT</strong>gmail.com !</p>
 <h2 id="currently-available">Currently available</h2>
 <p>Do you need professional software development work done ?
 You are in luck , I am currently available for all your programming needs.</p>
 <ul>
-<li><a href="/pages/resume-en.html">resume (English)</a></li>
-<li><a href="/pages/resume-de.html">resume (German)</a></li>
-<li><a href="/pages/resume-fr.html">resume (French)</a></li>
+<li>resume (English) <a href="/pages/resume-en.html">html</a> <a href="/data/resume/resume-mark-moissette-en.pdf">pdf</a></li>
+<li>resume (German) <a href="/pages/resume-de.html">html</a> <a href="/data/resume/resume-de.pdf">pdf</a></li>
+<li>resume (French) <a href="/pages/resume-fr.html">html</a> <a href="/data/resume/resume-fr.pdf">pdf</a></li>
 </ul>
-<p>and of course, <a href="https://github.com/kaosat-dev">githube profile</a></p>
+<p>and of course, <a href="https://github.com/kaosat-dev">github profile</a></p>
 
   </div>
           </section>
