--- a/pages/articles.html
+++ b/pages/articles.html
@@ -41,22 +41,22 @@
     <ul class='articlesList'>
       
     <li>
-    <span>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
     </li>
     <li>
-    <span>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
     </li>
     <li>
-    <span>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
+    <span class='date'>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
     </li>
     <li>
-    <span>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
+    <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
     </li>
     <li>
-    <span>2017-04-02</span> <a href='/posts/back-into-action'>The long sleep </a>
+    <span class='date'>2017-04-02</span> <a href='/posts/back-into-action'>The long sleep </a>
     </li>
     <li>
-    <span>2017-04-02</span> <a href='/posts/unroll-the-Rollup-banner'>Unroll the Rollup banner !</a>
+    <span class='date'>2017-04-02</span> <a href='/posts/unroll-the-Rollup-banner'>Unroll the Rollup banner !</a>
     </li>
     </ul>
     <h2>
