--- a/pages/404.html
+++ b/pages/404.html
@@ -1,7 +1,7 @@
 
     <html>
       <head>
-        <title>Kaosat.dev: projects</title>
+        <title>Kaosat.dev: not found</title>
         <link rel="stylesheet" href="/style.css">
         <link rel="stylesheet" href="/github-markdown.css">
 
@@ -34,29 +34,8 @@
             </section>
           </header>
           <section class="content grid-central">
-            <div class='projects'>
-  <h1 id="projects-old--new">Projects, old &amp; new:</h1>
-<blockquote>
-<p>the projects are categorized here but there is a lot of cross polination !
-Ie : a lot of them use some coding, parametric design, 3d printing in various amounts</p>
-</blockquote>
-<ul>
-<li><h2 id="jscad-code-based-parametric-2d--3d-design-for-your-browser"><a href="/pages/projects/jscad">Jscad: code based parametric 2d &amp; 3d design for your browser</a></h2>
-<p><img src="/assets/img/jscad2.jpg" alt="jscad" title="jscad"></p>
-</li>
-<li><h2 id="gardening-3d-printed-tools-code-sensors-etc"><a href="/pages/projects/garden">Gardening: 3d printed tools, code, sensors etc</a></h2>
-<p><img src="/assets/img/onion-tool-2.jpg" alt="tooling" title="tooling"></p>
-</li>
-<li><h2 id="robotics"><a href="/pages/projects/robots">Robotics</a></h2>
-<p><img src="/assets/img/kiwikee.jpg" alt="robots" title="robots"></p>
-</li>
-<li><h2 id="3d-printing"><a href="/pages/projects/3dp">3d Printing</a></h2>
-<p><img src="/assets/img/reprap.jpg" alt="3dp" title="3dp"></p>
-</li>
-<li><h2 id="solar-passive-greenhouse"><a href="/pages/projects/greenhouse">Solar passive greenhouse</a></h2>
-<p><img src="/assets/img/greenhouse.png" alt="greenhouse" title="greenhouse"></p>
-</li>
-</ul>
+            <div class='about'>
+    <h1 id="uh-oh-it-looks-like-we-do-not-have-what-you-are-looking-for-sorry-">Uh, oh, it looks like we do not have what you are looking for, sorry !</h1>
 
   </div>
           </section>
