--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <html>
       <head>
         <title>Kaosat.dev: index</title>
-        <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="/github-markdown.css">
+        <link rel="stylesheet" href="/assets/style/style.css">
+        <link rel="stylesheet" href="/assets/style/github-markdown.css">
 
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
           <header class="header grid-central">
             <section class="infos">
               <h1><a href="/"> Kaosat.net</a> </h1>
-              <h2>Programming, 3d printing, Gardening, Aquaponics, and lots more</h2>
+              <h2>Gardener of code & plants: Programming, 3d printing, Gardening, Aquaponics, and lots more</h2>
             </section>
             <section id="navigation" class='navigation'>
               <span> <a href="/pages/projects.html">projects</a></span> <span> <a href="/pages/articles.html">articles</a></span> <span> <a href="/pages/about.html">about</a></span>
@@ -46,7 +46,7 @@ My name is Mark &amp; I am a gardener of code &amp; plants.</p>
 <li>find me on <a href="https://github.com/kaosat-dev">github</a></li>
 <li>my <a href="/pages/resume-en.html">resume</a>  </li>
 </ul>
-<p>Curious for more ? check out my latest posts &amp; projects below or read up <a href="&#39;/pages/about&#39;">here</a></p>
+<p>Curious for more ? check out my latest posts &amp; projects below or read up <a href="/pages/about">here</a></p>
 
     </div>
 
