chore(resume): * added translation for education & language headers * updated css * modified generation * added pre-generated pdf * updated links

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,8 +51,8 @@
 You are in luck , I am currently available for all your programming needs.</p>
 <ul>
 <li>resume (English) <a href="/pages/resume-en.html">html</a> <a href="/data/resume/resume-mark-moissette-en.pdf">pdf</a></li>
-<li>resume (German) <a href="/pages/resume-de.html">html</a> <a href="/data/resume/resume-de.pdf">pdf</a></li>
-<li>resume (French) <a href="/pages/resume-fr.html">html</a> <a href="/data/resume/resume-fr.pdf">pdf</a></li>
+<li>resume (German) <a href="/pages/resume-de.html">html</a> <a href="/data/resume/resume-mark-moissette-de.pdf">pdf</a></li>
+<li>resume (French) <a href="/pages/resume-fr.html">html</a> <a href="/data/resume/resume-mark-moissette-fr.pdf">pdf</a></li>
 </ul>
 <p>and of course, <a href="https://github.com/kaosat-dev">github profile</a></p>
 
