feat(tag search): added per tag search * and various search tweaks * also style & content updates for projects

--- a/pages/projects-3dp.html
+++ b/pages/projects-3dp.html
@@ -35,20 +35,7 @@
           </header>
           <section class="content grid-central">
             <div class='projects'>
-  <ul>
-<li><h2 id="jscad-parametric-2d--3d-design"><a href="/pages/projects/jscad">Jscad: parametric 2d &amp; 3d design</a></h2>
-<p><img src="/assets/img/jscad2.jpg" alt="jscad" title="jscad"></p>
-</li>
-<li><h2 id="gardening-3d-printed-tools-code-sensors-etc"><a href="/pages/projects/garden">Gardening: 3d printed tools, code, sensors etc</a></h2>
-<p><img src="/assets/img/onion-tool-2.jpg" alt="tooling" title="tooling"></p>
-</li>
-<li><h2 id="robotics"><a href="/pages/projects/robots">Robotics</a></h2>
-<p><img src="/assets/img/kiwikee.jpg" alt="robots" title="robots"></p>
-</li>
-<li><h2 id="3d-printing"><a href="/pages/projects-3dp">3d Printing</a></h2>
-<p><img src="/assets/img/reprap.jpg" alt="3dp" title="3dp"></p>
-</li>
-</ul>
+  <p>oh cool, some 3D printing ! </p>
 
   </div>
           </section>
