chore(style): overhauled styling * media queries for smaller screens & corresponding css * related tweaks * lots of minor improvements

--- a/pages/tmp.html
+++ b/pages/tmp.html
@@ -1,7 +1,7 @@
 
     <html>
       <head>
-        <title>Kaosat.dev: Hydroduino: Arduino multi thermometer (Processing vs Python)</title>
+        <title>Kaosat.dev: undefined</title>
         <link rel="stylesheet" media="(max-width: 640px)" href="/assets/style/style-max-640px.css">
         <link rel="stylesheet" media="(min-width: 640px)" href="/assets/style/style-min-640px.css">
         <link rel="stylesheet" href="/assets/style/style.css">
@@ -35,30 +35,20 @@
             </section>
           </header>
           <section class="content grid-central">
-            <div class='markdown-body'>
-  <span>
-  2009-10-18
- </span>
-  <h1 id="hydroduino-arduino-multi-thermometer-processing-vs-python">Hydroduino: Arduino multi thermometer (Processing vs Python)</h1>
-<p><a href="./assets/arduinothermometer_python.jpg"><img src="./assets/arduinothermometer_python.jpg" alt="arduinothermometer_python" title="arduinothermometer_python"></a></p>
-<p>Since i recently started learning Python, i am trying to &quot;re-write&quot; (based on the algorithms , not literal rewrites) of a few programs i did in c# and Processing, and this is basic temperature monitor. More info, processing applet, and code below.</p>
-<p>So what did i do  ?</p>
-<ul>
-<li>cleaned up the original multi LM35CZ based Processing project i did a while back</li>
-<li>decided to try to write something similar in python</li>
-<li>the aim was to get the overall visual aspect as close as i could to the Processing program, and that worked out better than i hoped</li>
-<li>this (or an updated form of it) will be part of the hydroduino project for environmental monitoring and control</li>
-</ul>
-<p>The Processing applet:</p>
-<p><img src="./assets/loading.gif" alt=""></p>
-<p><strong>Source code:</strong> <a href="http://www.kaosat.net/applets/arduino_thermometer_0_02/arduino_thermometer_0_02.pde">Processing :arduino_thermometer_0_02</a> <a href="http://www.kaosat.net/downloads/arduino_thermometer/PyThermo001.py">Python :PyThermo001.py</a></p>
-<p>A few important things though:</p>
-<ul>
-<li>of course as there is no Arduino connected to it, the applet presented above is just displaying fake randomized data</li>
-<li>The python code is a lot more complete, reusable and object oriented, hence its slighly bigger complexity</li>
-<li>A secondary aim was, not to change the code Arduino-side, since a different in the program displaying the data should have no impact on the device sending it (better decoupling)</li>
-<li>The python version uses PyGame and PySerial as its backbone</li>
-<li>Code is gpl unless specified otherwise. (feel free to use anything you can salvage:)</li>
+            <div>
+  <ul>
+<li><h2 id="jscad-parametric-2d--3d-design"><a href="/pages/projects-jscad">Jscad: parametric 2d &amp; 3d design</a></h2>
+<p><img src="/assets/img/jscad2.jpg" alt="jscad" title="jscad"></p>
+</li>
+<li><h2 id="gardening-3d-printed-tools-code-sensors-etc"><a href="/pages/projects-garden">Gardening: 3d printed tools, code, sensors etc</a></h2>
+<p><img src="/assets/img/onion-tool-2.jpg" alt="tooling" title="tooling"></p>
+</li>
+<li><h2 id="robotics"><a href="/pages/projects-robots">Robotics</a></h2>
+<p><img src="/assets/img/kiwikee.jpg" alt="robots" title="robots"></p>
+</li>
+<li><h2 id="3d-printing"><a href="/pages/projects-3dp">3d Printing</a></h2>
+<p><img src="/assets/img/reprap.jpg" alt="3dp" title="3dp"></p>
+</li>
 </ul>
 
   </div>
