--- a/pages/articles.html
+++ b/pages/articles.html
@@ -45,10 +45,7 @@
     <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
     </li>
     <li>
-    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
-    </li>
-    <li>
-    <span class='date'>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation part 1'>dynamic es-module creation</a>
     </li>
     <li>
     <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
@@ -219,7 +216,7 @@
     <ul class='tagsList'>
       
     <li>
-    <span> <a href='/searchResults.html?search=tags:gardening'>gardening (3)</a> </span>
+    <span> <a href='/searchResults.html?search=tags:gardening'>gardening (2)</a> </span>
     </li>
     <li>
     <span> <a href='/searchResults.html?search=tags:onions'>onions (1)</a> </span>
@@ -237,7 +234,7 @@
     <span> <a href='/searchResults.html?search=tags:gahoma'>gahoma (1)</a> </span>
     </li>
     <li>
-    <span> <a href='/searchResults.html?search=tags:design'>design (2)</a> </span>
+    <span> <a href='/searchResults.html?search=tags:design'>design (1)</a> </span>
     </li>
     <li>
     <span> <a href='/searchResults.html?search=tags:2010'>2010 (16)</a> </span>
@@ -742,15 +739,6 @@
     </li>
     <li>
     <span> <a href='/searchResults.html?search=tags:horror'>horror (1)</a> </span>
-    </li>
-    <li>
-    <span> <a href='/searchResults.html?search=tags:greenhouse'>greenhouse (1)</a> </span>
-    </li>
-    <li>
-    <span> <a href='/searchResults.html?search=tags:passive'>passive (1)</a> </span>
-    </li>
-    <li>
-    <span> <a href='/searchResults.html?search=tags:solar'>solar (1)</a> </span>
     </li>
     <li>
     <span> <a href='/searchResults.html?search=tags:fruits'>fruits (1)</a> </span>
