--- a/pages/index.html
+++ b/pages/index.html
@@ -66,12 +66,12 @@ My name is Mark &amp; I am a gardener of code &amp; plants.</p>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation'>dynamic es-module creation</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation part 1'>dynamic es-module creation</a>
       </div>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-11-12</span> <a href='/posts/greenhouse-building-musings'>Greenhouse building musings</a>
+        <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
       </div>
     </li>
     <li>
