--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ My name is Mark &amp; I am a gardener of code &amp; plants.</p>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation part 1</a>
       </div>
     </li>
     <li>
