--- a/pages/articles.html
+++ b/pages/articles.html
@@ -45,7 +45,7 @@
     <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
     </li>
     <li>
-    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation part 1</a>
     </li>
     <li>
     <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
