chore(site): update & regen of whole site

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <h2>Gardener of code & plants: programming, 3d printing, Gardening, Aquaponics, & lots more</h2>
             </section>
             <section id="navigation" class='navigation'>
-              <a href="/pages/projects.html">projects</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
+              <a href="/pages/projects.html">projects</a> <a href="/pages/portofolio.html">portofolio</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
               <span>
                 <input type='text' placeholder='search' id='search' name='search' autocomplete='off'></input>
               </span>
@@ -61,17 +61,17 @@ My name is Mark &amp; I am a gardener of code &amp; plants.</p>
         
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/undefined'>3d printed onion planting tool</a>
       </div>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation part 1</a>
+        <span class='date'>2018-11-26</span> <a href='/posts/undefined'>dynamic es-module creation part 1</a>
       </div>
     </li>
     <li>
       <div class='item'>
-        <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
+        <span class='date'>2018-08-26</span> <a href='/posts/undefined'>Mirabelle plums first harvest</a>
       </div>
     </li>
     <li>
