--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -1,7 +1,7 @@
 
     <html>
       <head>
-        <title>Kaosat.dev: Multivalve system for HydroDuino</title>
+        <title>Kaosat.dev: portofolio</title>
         <link rel="stylesheet" media="(max-width: 640px)" href="/assets/style/style-max-640px.css">
         <link rel="stylesheet" media="(min-width: 640px)" href="/assets/style/style-min-640px.css">
         <link rel="stylesheet" href="/assets/style/style.css">
@@ -35,25 +35,9 @@
             </section>
           </header>
           <section class="content grid-central">
-            <div class='markdown-body'>
-  <span>
-  2010-05-26
- </span>
-  <h1 id="multivalve-system-for-hydroduino">Multivalve system for HydroDuino</h1>
-<p><a href="./assets/multi-valve-schematic.jpg"><img src="./assets/multi-valve-schematic.jpg" alt="" title="multi-valve-schematic"></a></p>
-<p>In order to have a better level of control for the water distribution in the different containers for my hydroponics automation , i though of using many different systems, using a set of servomotors and modified gardening valves, but in the end came up with a small and cheap to build &quot;device&quot;, using only a single servo and easily available materials.</p>
-<p>The device needed to take one water input, and allow to choose an outlet selectively , so I came up with the following design and working principle:</p>
-<p><a href="./assets/multivalve-principle.jpg"><img src="./assets/multivalve-principle.jpg" alt="" title="multivalve-principle"></a></p>
-<p>All you need to build it is a small pvc pipe section, some old cd boxes, a few joints and a lot of hot glue! ( and a few tools of course).</p>
-<p>The servo is connected to an arduino , and will be automated using the Hydroduino remote monitoring and control system (more on the progress on that part soon).</p>
-<p>Now, of course its far from perfect so there are some problems that still need to be ironed out :</p>
-<ul>
-<li>since I chose a somewhat too small length of pipe for the outer housing, the inner pressure is far too great resulting in quite a lot of leaks, and water going into the hoses where it should not ( although, because of the pressure difference , this is not really a problem right now, since the pressure is still significantly higher in the correct outlet) .</li>
-<li>it is quite hard to balance the fact that the inner , rotating ring need to have a tight fit, to minimize leaks, with a sufficient &quot;looseness&quot; to enable the servomotor to rotate it without problems</li>
-</ul>
-<p>Any suggestions on improvements, or comments in general , are of course more than welcome :)</p>
-<p>Ps : here are some pictures of different elements, and the still work in progress servo mount:</p>
-<p><a href="./assets/wpid-IMAG0412.jpg"><img src="./assets/wpid-IMAG0412.jpg" alt="" title="wpid-IMAG0412.jpg"></a><a href="./assets/wpid-IMAG0403.jpg"><img src="./assets/wpid-IMAG0403.jpg" alt="" title="wpid-IMAG0403.jpg"></a><a href="./assets/wpid-IMAG0417.jpg"><img src="./assets/wpid-IMAG0417.jpg" alt="" title="wpid-IMAG0417.jpg"></a></p>
+            <div class='portofolio'>
+    <h1 id="why-a-portofolioshowcase-">Why a portofolio/showcase ?</h1>
+<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! Enjoy !</p>
 
   </div>
           </section>
