--- a/pages/articles.html
+++ b/pages/articles.html
@@ -20,7 +20,7 @@
               <h2>Gardener of code & plants: programming, 3d printing, Gardening, Aquaponics, & lots more</h2>
             </section>
             <section id="navigation" class='navigation'>
-              <a href="/pages/projects.html">projects</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
+              <a href="/pages/projects.html">projects</a> <a href="/pages/portofolio.html">portofolio</a> <a href="/pages/articles.html">articles</a> <a href="/pages/about.html">about</a>
               <span>
                 <input type='text' placeholder='search' id='search' name='search' autocomplete='off'></input>
               </span>
@@ -42,19 +42,19 @@
     <ul class='articlesList'>
       
     <li>
-    <span class='date'>2018-11-26</span> <a href='/posts/3d-printed-onion-planting-tool'>3d printed onion planting tool</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/undefined'>3d printed onion planting tool</a>
     </li>
     <li>
-    <span class='date'>2018-11-26</span> <a href='/posts/dynamic-es-module-creation-part-1'>dynamic es-module creation part 1</a>
+    <span class='date'>2018-11-26</span> <a href='/posts/undefined'>dynamic es-module creation part 1</a>
     </li>
     <li>
-    <span class='date'>2018-08-26</span> <a href='/posts/mirabelle-plums-first-harvest'>Mirabelle plums first harvest</a>
+    <span class='date'>2018-08-26</span> <a href='/posts/undefined'>Mirabelle plums first harvest</a>
     </li>
     <li>
-    <span class='date'>2017-04-02</span> <a href='/posts/back-into-action'>The long sleep </a>
+    <span class='date'>2017-04-02</span> <a href='/posts/undefined'>The long sleep </a>
     </li>
     <li>
-    <span class='date'>2017-04-02</span> <a href='/posts/unroll-the-Rollup-banner'>Unroll the Rollup banner !</a>
+    <span class='date'>2017-04-02</span> <a href='/posts/undefined'>Unroll the Rollup banner !</a>
     </li>
     </ul>
     <h2>
@@ -63,151 +63,151 @@
     <ul class='articlesList'>
       
     <li>
-    <span>2011-09-22</span> <a href='/posts/archives/science-python-unicorns-and-some-important-personnal-news'>Science ! Python! Unicorns! (and some important personnal news)</a>
+    <span>2011-09-22</span> <a href='/posts/undefined'>Science ! Python! Unicorns! (and some important personnal news)</a>
     </li>
     <li>
-    <span>2011-08-20</span> <a href='/posts/archives/long-time-no-post-old-l-system-and-cellular-automata-files'>Long time no post: old L-System and Cellular Automata files </a>
+    <span>2011-08-20</span> <a href='/posts/undefined'>Long time no post: old L-System and Cellular Automata files </a>
     </li>
     <li>
-    <span>2011-06-18</span> <a href='/posts/archives/the-endless-walz-of-reprap-self-upgrades'>The endless walz of reprap self upgrades</a>
+    <span>2011-06-18</span> <a href='/posts/undefined'>The endless walz of reprap self upgrades</a>
     </li>
     <li>
-    <span>2011-04-12</span> <a href='/posts/archives/bootstraping-a-reprap-generation-2-is-born'>Bootstraping a Reprap : generation 2 is born !</a>
+    <span>2011-04-12</span> <a href='/posts/undefined'>Bootstraping a Reprap : generation 2 is born !</a>
     </li>
     <li>
-    <span>2011-04-10</span> <a href='/posts/archives/short-doboz-web-news-v0-32-updates-and-additions'>Short Doboz-web news: v0.32 updates and additions</a>
+    <span>2011-04-10</span> <a href='/posts/undefined'>Short Doboz-web news: v0.32 updates and additions</a>
     </li>
     <li>
-    <span>2011-03-03</span> <a href='/posts/archives/doboz-web-reprap3d-scanner-remote-control-using-python-javascript-webgl'>Doboz-Web: Reprap/3d scanner remote control using python, javascript, webgl</a>
+    <span>2011-03-03</span> <a href='/posts/undefined'>Doboz-Web: Reprap/3d scanner remote control using python, javascript, webgl</a>
     </li>
     <li>
-    <span>2011-02-02</span> <a href='/posts/archives/modular-parametric-printable-rack-for-rackpininon-for-reprap'>Modular, parametric printable rack (for rack&pinion) for Reprap </a>
+    <span>2011-02-02</span> <a href='/posts/undefined'>Modular, parametric printable rack (for rack&pinion) for Reprap </a>
     </li>
     <li>
-    <span>2011-01-24</span> <a href='/posts/archives/labglass-a-tool-for-chemistrylaboratory-glassware-experiment-schematics'>LabGlass: a tool for chemistry/laboratory glassware experiment schematics</a>
+    <span>2011-01-24</span> <a href='/posts/undefined'>LabGlass: a tool for chemistry/laboratory glassware experiment schematics</a>
     </li>
     <li>
-    <span>2011-01-15</span> <a href='/posts/archives/hydroduino-reborn'>HydroDuino...reborn!</a>
+    <span>2011-01-15</span> <a href='/posts/undefined'>HydroDuino...reborn!</a>
     </li>
     <li>
-    <span>2011-01-03</span> <a href='/posts/archives/repstrapreprap-from-nichrome-wire-to-heater-block'>Repstrap/reprap: from nichrome wire to heater block</a>
+    <span>2011-01-03</span> <a href='/posts/undefined'>Repstrap/reprap: from nichrome wire to heater block</a>
     </li>
     <li>
-    <span>2010-12-12</span> <a href='/posts/archives/doboz-repstrap-slanted-print-issue-solved-here-is-how'>Doboz repstrap : solving the slanted print issue </a>
+    <span>2010-12-12</span> <a href='/posts/undefined'>Doboz repstrap : solving the slanted print issue </a>
     </li>
     <li>
-    <span>2010-11-28</span> <a href='/posts/archives/doboz-repstrap-increasing-build-quality-and-reliability'>Doboz repstrap: increasing build quality and reliability</a>
+    <span>2010-11-28</span> <a href='/posts/undefined'>Doboz repstrap: increasing build quality and reliability</a>
     </li>
     <li>
-    <span>2010-11-19</span> <a href='/posts/archives/turning-a-repstrap-into-a-working-but-limited-3d-scanner-for-less-than-5-euros'>Turning a Rep(st)rap into a working ( but  limited ) 3d scanner for less than 5 euros.</a>
+    <span>2010-11-19</span> <a href='/posts/undefined'>Turning a Rep(st)rap into a working ( but  limited ) 3d scanner for less than 5 euros.</a>
     </li>
     <li>
-    <span>2010-11-17</span> <a href='/posts/archives/repstrap-improvements-also-kaosat-net-now-on-twitter'>Repstrap Improvements, also kaosat.net now on Twitter</a>
+    <span>2010-11-17</span> <a href='/posts/undefined'>Repstrap Improvements, also kaosat.net now on Twitter</a>
     </li>
     <li>
-    <span>2010-10-21</span> <a href='/posts/archives/building-a-repstrap-8-its-aliiive-also-improvements'>Building a Repstrap (8) its ALIIIVE! also , improvements!</a>
+    <span>2010-10-21</span> <a href='/posts/undefined'>Building a Repstrap (8) its ALIIIVE! also , improvements!</a>
     </li>
     <li>
-    <span>2010-09-20</span> <a href='/posts/archives/building-a-repstrap-7-final-electronicsmotherboard'>Building a Repstrap(7) : final electronics/motherboard</a>
+    <span>2010-09-20</span> <a href='/posts/undefined'>Building a Repstrap(7) : final electronics/motherboard</a>
     </li>
     <li>
-    <span>2010-08-25</span> <a href='/posts/archives/building-a-repstrap-6-yarp-is-now-called-doboz-also-stepping-things-up-with-pololu-stepper-drivers'>Building a Repstrap (6): 'Yarp' is now called 'Doboz' Also, Stepping things up with Pololu stepper drivers!  </a>
+    <span>2010-08-25</span> <a href='/posts/undefined'>Building a Repstrap (5): plastic filament extruder driver from scrap</a>
     </li>
     <li>
-    <span>2010-08-25</span> <a href='/posts/archives/building-a-repstrap-5-plastic-filament-extruder-driver-from-scrap'>Building a Repstrap (5): plastic filament extruder driver from scrap</a>
+    <span>2010-08-25</span> <a href='/posts/undefined'>Building a Repstrap (6): 'Yarp' is now called 'Doboz' Also, Stepping things up with Pololu stepper drivers!  </a>
     </li>
     <li>
-    <span>2010-07-08</span> <a href='/posts/archives/building-a-repstrap-4-progress-and-problems'>Building a repstrap (4) progress and problems</a>
+    <span>2010-07-08</span> <a href='/posts/undefined'>Building a repstrap (4) progress and problems</a>
     </li>
     <li>
-    <span>2010-07-01</span> <a href='/posts/archives/building-a-repstrap-3-box-and-cartesian-robot-almost-done'>Building a repstrap (3) box and cartesian robot almost done</a>
+    <span>2010-07-01</span> <a href='/posts/undefined'>Building a repstrap (3) box and cartesian robot almost done</a>
     </li>
     <li>
-    <span>2010-06-21</span> <a href='/posts/archives/building-a-repstrap-2-design-changes-yarp-v-0-2'>Building a repstrap (2) design changes: YARP v 0.2 </a>
+    <span>2010-06-21</span> <a href='/posts/undefined'>Building a repstrap (2) design changes: YARP v 0.2 </a>
     </li>
     <li>
-    <span>2010-06-11</span> <a href='/posts/archives/yarp-yet-another-repstrap-project-building-a-repstrap1'>Building a repstrap (1) : YARP: Yet Another Repstrap Project</a>
+    <span>2010-06-11</span> <a href='/posts/undefined'>Building a repstrap (1) : YARP: Yet Another Repstrap Project</a>
     </li>
     <li>
-    <span>2010-05-26</span> <a href='/posts/archives/multivalve-system-for-hydroduino'>Multivalve system for HydroDuino</a>
+    <span>2010-05-26</span> <a href='/posts/undefined'>Multivalve system for HydroDuino</a>
     </li>
     <li>
-    <span>2010-03-12</span> <a href='/posts/archives/picspheres-a-gesture-based-interaction-photogallery'>Picspheres- a gesture based interaction photogallery</a>
+    <span>2010-03-12</span> <a href='/posts/undefined'>Picspheres- a gesture based interaction photogallery</a>
     </li>
     <li>
-    <span>2010-01-03</span> <a href='/posts/archives/2010-the-year-we-make-more-projects'>2010, the year we make ...more projects</a>
+    <span>2010-01-03</span> <a href='/posts/undefined'>2010, the year we make ...more projects</a>
     </li>
     <li>
-    <span>2010-01-02</span> <a href='/posts/archives/a-visit-to-the-eden-project'>A visit to the Eden Project (1)</a>
+    <span>2010-01-02</span> <a href='/posts/undefined'>A visit to the Eden Project (1)</a>
     </li>
     <li>
-    <span>2009-11-03</span> <a href='/posts/archives/hydroduino-pump-control-solved-project-update'>Hydroduino Pump control solved + project update</a>
+    <span>2009-11-03</span> <a href='/posts/undefined'>Hydroduino Pump control solved + project update</a>
     </li>
     <li>
-    <span>2009-11-01</span> <a href='/posts/archives/projects-update-learning-from-mistakes2-multitouch'>Projects update : learning from mistakes(2) - Multitouch</a>
+    <span>2009-11-01</span> <a href='/posts/undefined'>Projects update : learning from mistakes(2) - Multitouch</a>
     </li>
     <li>
-    <span>2009-10-18</span> <a href='/posts/archives/hydroduino-arduino-multi-thermometer-processing-vs-python'>Hydroduino: Arduino multi thermometer (Processing vs Python)</a>
+    <span>2009-10-18</span> <a href='/posts/undefined'>Hydroduino: Arduino multi thermometer (Processing vs Python)</a>
     </li>
     <li>
-    <span>2009-09-30</span> <a href='/posts/archives/projects-update-learning-from-mistakes1-hydroponics'>Projects update : learning from mistakes(1) - Hydroponics</a>
+    <span>2009-09-30</span> <a href='/posts/undefined'>Projects update : learning from mistakes(1) - Hydroponics</a>
     </li>
     <li>
-    <span>2009-06-14</span> <a href='/posts/archives/asus-16-vw161-d-lcd-screen-disassembly'>Asus 16 Inch VW161-D LCD screen disassembly</a>
+    <span>2009-06-14</span> <a href='/posts/undefined'>Asus 16 Inch VW161-D LCD screen disassembly</a>
     </li>
     <li>
-    <span>2009-06-13</span> <a href='/posts/archives/just-shrimpin'>Just Shrimpin'</a>
+    <span>2009-06-13</span> <a href='/posts/undefined'>Just Shrimpin'</a>
     </li>
     <li>
-    <span>2009-05-24</span> <a href='/posts/archives/first-growth-tests-week-8-and-9'>First growth tests : Week 8 and 9</a>
+    <span>2009-05-24</span> <a href='/posts/undefined'>First growth tests : Week 8 and 9</a>
     </li>
     <li>
-    <span>2009-05-21</span> <a href='/posts/archives/ir-multitouch-prototype-2'> Ir Multitouch Prototype 2</a>
+    <span>2009-05-21</span> <a href='/posts/undefined'> Ir Multitouch Prototype 2</a>
     </li>
     <li>
-    <span>2009-04-20</span> <a href='/posts/archives/processing-ir-interpolation-emulation-opencv-blob-detection-and-tracking-applets'>Ir interpolation emulation + openCV blob detection & tracking (applets)</a>
+    <span>2009-04-20</span> <a href='/posts/undefined'>Ir interpolation emulation + openCV blob detection & tracking (applets)</a>
     </li>
     <li>
-    <span>2009-04-20</span> <a href='/posts/archives/processing-ir-value-interpolation-emulation-with-processing-applet-and-code'>IR interpolation (Processing applet and code)</a>
+    <span>2009-04-20</span> <a href='/posts/undefined'>IR interpolation (Processing applet and code)</a>
     </li>
     <li>
-    <span>2009-04-13</span> <a href='/posts/archives/ir-multitouch-test'>Ir Multitouch Test</a>
+    <span>2009-04-13</span> <a href='/posts/undefined'>Ir Multitouch Test</a>
     </li>
     <li>
-    <span>2009-04-09</span> <a href='/posts/archives/first-growth-tests-week-4'>First growth tests : week 4 !</a>
+    <span>2009-04-09</span> <a href='/posts/undefined'>First growth tests : week 4 !</a>
     </li>
     <li>
-    <span>2009-03-19</span> <a href='/posts/archives/dwc-deep-water-culture-setup-finished'>Dwc (Deep Water Culture) Setup finished</a>
+    <span>2009-03-19</span> <a href='/posts/undefined'>Dwc (Deep Water Culture) Setup finished</a>
     </li>
     <li>
-    <span>2009-03-18</span> <a href='/posts/archives/homemade-hydroponics-hydroduino2'>HydroDuino Pump Control Problems</a>
+    <span>2009-03-18</span> <a href='/posts/undefined'>HydroDuino Pump Control Problems</a>
     </li>
     <li>
-    <span>2009-03-16</span> <a href='/posts/archives/first-growth-tests-day-2'>First growth tests : week 2 !</a>
+    <span>2009-03-16</span> <a href='/posts/undefined'>First growth tests : week 2 !</a>
     </li>
     <li>
-    <span>2009-03-13</span> <a href='/posts/archives/ecosystem-imulation-Artemias(1)'>Ecosystem Simulation - Artemias(1)</a>
+    <span>2009-03-13</span> <a href='/posts/undefined'>Ecosystem Simulation - Artemias(1)</a>
     </li>
     <li>
-    <span>2009-03-12</span> <a href='/posts/archives/heat-and-pressure-propagation-using-cellular-automata'>Heat and pressure propagation using cellular automata</a>
+    <span>2009-03-12</span> <a href='/posts/undefined'>Heat and pressure propagation using cellular automata</a>
     </li>
     <li>
-    <span>2009-03-11</span> <a href='/posts/archives/L-Systems-in-csharp-mono'>L Systems in c# / mono</a>
+    <span>2009-03-11</span> <a href='/posts/undefined'>L Systems in c# / mono</a>
     </li>
     <li>
-    <span>2009-03-11</span> <a href='/posts/archives/first-growth-tests-day1'>First growth tests : Week 1 !</a>
+    <span>2009-03-11</span> <a href='/posts/undefined'>First growth tests : Week 1 !</a>
     </li>
     <li>
-    <span>2009-03-11</span> <a href='/posts/archives/hello-world'>Homemade Hydroponics-HydroDuino(1) Automation with Arduino</a>
+    <span>2009-03-11</span> <a href='/posts/undefined'>Homemade Hydroponics-HydroDuino(1) Automation with Arduino</a>
     </li>
     <li>
-    <span>2009-03-05</span> <a href='/posts/archives/homemade-hydroponics2-dwc-deep-water-culture-setup'>Homemade Hydroponics(2) Dwc (Deep Water Culture) Setup</a>
+    <span>2009-03-05</span> <a href='/posts/undefined'>Homemade Hydroponics(1) Ebb & Flow Setup</a>
     </li>
     <li>
-    <span>2009-03-05</span> <a href='/posts/archives/homemade-hydroponics1-ebb-flow-setup'>Homemade Hydroponics(1) Ebb & Flow Setup</a>
+    <span>2009-03-05</span> <a href='/posts/undefined'>Homemade Hydroponics(2) Dwc (Deep Water Culture) Setup</a>
     </li>
     <li>
-    <span>1970-01-01</span> <a href='/posts/archives/Explorials-on-the-web-Blob-creation-and-download'>Explorials: on the web: Blob creation and download </a>
+    <span>1970-01-01</span> <a href='/posts/undefined'>Explorials: on the web: Blob creation and download </a>
     </li>
     </ul>
     <h2>
