feat(portofolio): fleshed out portofolio

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
 <p><img src="/assets/img/mememe.jpg" alt="peek-a-printer" title="peek-a-printer"></p>
 <p>I am a Dad, living in Germany, gardener of code &amp; plants.</p>
 <ul>
-<li>Passion for 3d (programming, webgl, printing), at the service of &#39;real&#39; things (food, health, building etc), but also for fun !</li>
+<li>Passion for 3d (programming, webgl, printing), at the service of &#39;real&#39; things (food, robotics, health, building etc), but also for fun !</li>
 <li>Shamelessly enthusiastic javascripter , occasional C++, Pythonista, Elixir, etc</li>
 <li>One of the main developpers/maintainers of <a href="https://github.com/jscad/OpenJSCAD.org">https://github.com/jscad/OpenJSCAD.org</a> and proud of it :)</li>
 <li>Love of plants, nature</li>
