--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -37,7 +37,133 @@
           <section class="content grid-central">
             <div class='portofolio'>
     <h1 id="why-a-portofolioshowcase-">Why a portofolio/showcase ?</h1>
-<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! Enjoy !</p>
+<p>I have worked on a lot of projects in the past decade, on a lot of 3D/webgl, quite visual projects, so it recently dawned on me: let&#39;s have a nice visual showcase ! I love learning, challenges, finding the right tools for the job, as you can see in the list below.</p>
+<h2 id="jam--usco">Jam / usco</h2>
+<p>A very modular, multi platform Webgl app for collaborative editing &amp; sharing of 3d designs for Ultimaker/Youmagine.com for 3D printing &amp; more</p>
+<p><img src="/assets/img/portofolio/jam/MoreMultiEdit.gif" alt="Jam" title="Jam"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p><em><strong>Key points:</strong></em></p>
+<ul>
+<li>blazingly fast , streaming parsing for various 3d formats (stl, amf, 3mf)</li>
+<li>mobile (UM3 app), Web, and backend (thumbnail generation using Headless webgl rendering)</li>
+<li>bill of materials, shared 3d designs and a LOT more !</li>
+</ul>
+<p><em><strong>Showcase:</strong></em></p>
+<p><img src="/assets/img/portofolio/jam/RenderServer.gif" alt="Jam" title="Jam"></p>
+<p><img src="/assets/img/portofolio/jam/video.gif" alt="Jam" title="Jam"></p>
+</details>
+
+<br>
+
+<h2 id="openjscad-jscad">OpenJscad/ Jscad</h2>
+<p>A procedural, code based 3d modeling tool, for the browser, desktop, CLI &amp; more ! Ie: write some code, get a 3d printable design !
+A project with a huge scope and possibilities</p>
+<p><img src="/assets/img/portofolio/jscad/Screenshot%20from%202021-03-01%2011-22-05.png" alt="jscad" title="Jscad"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p>  <em><strong>Key points:</strong></em></p>
+<p>Over the past (5+) years I was a core developer/maintainer of OpenJscad </p>
+<ul>
+<li><p>Upgrade to modern Es-next, development of core features &amp; UI of parametric 2D/3D modeling program (Javascript, Node.js)</p>
+</li>
+<li><p>development of core modeling &amp; maths features, UI</p>
+</li>
+<li><p>creation of a desktop app (Electron)</p>
+</li>
+<li><p>migration from monolithic code to node modules</p>
+</li>
+<li><p>setup and addition of a huge amount of unit test</p>
+</li>
+<li><p>I did a talk at HannoverJs a few years back that explains the scope and challenges of my work on the project
+<a href="https://www.youtube.com/watch?v=PLA8VPRRi6A">https://www.youtube.com/watch?v=PLA8VPRRi6A</a></p>
+</li>
+<li><p>I also created <a href="https://www.youtube.com/watch?v=nJyede1Ah9k&amp;list=PLCiWVcSJ1UJSghHdQcTsAaXOBDkX0Nmx9">Electron based experimental Desktop app</a></p>
+</li>
+</ul>
+<p><img src="/assets/img/portofolio/jscad/Screenshot%20from%202021-03-01%2009-39-15.png" alt="jscad" title="Jscad"></p>
+<ul>
+<li>Using the principle of &#39;dogfooding&#39; (actually use the software you are developing), I often used the software to create robots, pcb housings, gardening tools etc<h3 id="variations">Variations</h3>
+</li>
+</ul>
+<h4 id="signed-distance-field-modeling">Signed distance field modeling</h4>
+<p>At some point I also experimented with purely GPU based rendering based on signed distance fields as a possible frontend/renderer alternative
+<img src="/assets/img/portofolio/jscad/df-csg-16.gif" alt="jscad" title="Jscad"></p>
+<p><img src="/assets/img/portofolio/jscad/ShapeFu-openscad.gif" alt="jscad" title="Jscad"></p>
+<p><img src="/assets/img/portofolio/jscad/3d-sdf1.gif" alt="jscad" title="Jscad"></p>
+<h4 id="coffeescad">Coffeescad</h4>
+<p>I also worked on a fork in CoffeeScript for a while called ... Coffeescad !
+There is an <a href="https://www.golem.de/news/coffeescad-3d-druckmodellierung-im-browser-1305-99271.html">interview</a> I did about it for the German It/tech journal Golem </p>
+</details>
+
+<br>
+
+<h2 id="simple-scan">Simple-scan</h2>
+<p>A full blown 3d scanning app in the browser , with connected dedicated hardware !</p>
+<p><img src="/assets/img/portofolio/simple-scan/0ceca305-6b8d-4b69-8ee9-951658f5fff3.png" alt="scan" title="scan"></p>
+<details>
+  <summary>Click to learn more!</summary>
+  
+  ***Key points:***
+
+<ul>
+<li>polymer.js / web component based</li>
+<li>hardware connection</li>
+<li>pleasant, easy to use user interface</li>
+<li>ported c bindings to enable use of native libraries for camera/hardware access</li>
+</ul>
+<p><img src="/assets/img/portofolio/simple-scan/87544581-b6f2-4d7f-b41b-7143ad69033d.png" alt="scan" title="scan">
+<img src="/assets/img/portofolio/simple-scan/b659faff-af75-43b1-9d56-026ffc3e7846.png" alt="scan" title="scan"></p>
+</details>
+
+<br>
+
+
+<h2 id="3d-printing">3d printing</h2>
+<p>A long standing passion &amp; work of mine is 3d printing, in all its aspects: software, hardware, electronics, processes</p>
+<p><img src="/assets/img/portofolio/simple-scan/0ceca305-6b8d-4b69-8ee9-951658f5fff3.png" alt="scan" title="scan"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p>  <em><strong>Key points:</strong></em></p>
+</details>
+
+<br>
+
+
+<h2 id="electronics-robotics">Electronics/ Robotics</h2>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p>  <em><strong>Key points:</strong></em></p>
+</details>
+
+<br>
+
+
+<h2 id="game-engine-tech-exploration">Game engine/ tech exploration</h2>
+<p>This personal project was a breeding ground to learn/ deepen my understanding about a lot of technologies, and how far you 
+can push a &#39;tool-less&#39; web stack (no build steps, using native esmodules only as much as possible)</p>
+<p><img src="/assets/img/portofolio/gamedev/su-proto2.2.png" alt="gamedev" title="gamedev"></p>
+<details>
+  <summary>Click to learn more!</summary>
+
+<p>  <em><strong>Key points:</strong></em></p>
+<ul>
+<li>ECS implementations</li>
+<li>experimentation with Webgl &amp; WebGPU</li>
+<li>heightmaps, physics, all in vanilla js</li>
+<li>experimentation with Quick.js / embeded js engines</li>
+<li>electron app with sound, gamepad etc support</li>
+<li>python code for Blender add ons</li>
+</ul>
+</details>
+
+
+
+
 
   </div>
           </section>
